crates/engram-cli/tests/snapshots/command/progress_prune_bar_complete.snap
---
source: crates/engram-cli/src/progress.rs
expression: body
---
links [========================================] 3/3 (0s)
