crates/engram-cli/tests/snapshots/command/progress_prune_bar_mid_progress.snap
---
source: crates/engram-cli/src/progress.rs
expression: body
---
orphan [==========>-----------------------------] 1/4 (0s)
