crates/engram-cli/tests/snapshots/command/projects_delete_confirmed.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
? Continue? [y/N] → yes
--- stdout ---
Removed project from registry (path: [PROJECT])
Deleted global data (LanceDB index).
--- stderr ---
Warning: This will remove project '[PID]' from the registry and delete its index (personal memories are kept unless you pass --purge).
