crates/engram-cli/tests/snapshots/command/projects_delete_declined.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
? Continue? [y/N] → no
--- stdout ---
Aborted.
--- stderr ---
Warning: This will remove project '[PID]' from the registry and delete its index (personal memories are kept unless you pass --purge).
--- error ---
delete declined; nothing was removed
