crates/engram-cli/tests/snapshots/command/projects_prune_declined.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
? Remove all? [y/N] → no
--- stdout ---
  Found 1 stale registry entry(ies).
  No orphan data directories found.
  No broken parent links found.
Aborted.
--- stderr ---
