crates/engram-cli/tests/snapshots/command/projects_prune_json_refuses.snap
---
source: crates/engram-cli/src/testutil.rs
expression: body
---
--- prompts ---
--- stdout ---
--- stderr ---
--- error ---
prune requires confirmation; re-run with --force in JSON mode
